--- a/server/.htaccess
+++ b/server/.htaccess
@@ -1,1 +1,1 @@
-ErrorDocument 404 https://www.donbotti.de/?key=Donbotti&token=False#404
+ErrorDocument 404 https://www.donbotti.de/?key=Donbotti&token=none#404
