--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -1,12 +1,16 @@
 aiohttp==3.7.4.post0
+async-lichess-sdk==1.1.0.7
 async-timeout==3.0.1
 attrs==20.3.0
 certifi==2020.12.5
 chardet==4.0.0
+chess==1.5.0
 discord==1.0.1
 discord.py==1.7.2
 idna==2.10
 multidict==5.1.0
+python-chess==1.999
+python-lichess==0.9
 requests==2.25.1
 six==1.15.0
 typing-extensions==3.10.0.0
