--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-# Traffic
-new 
-python.exe
-*.exe
-
-# Shell Commands
-*.txt
-
-# Neuronal Network
-.ipynb_checkpoints
-
 # Server
 *.flag
 
@@ -26,7 +15,7 @@ client/ftpdata.py
 *data*
 
 # PIP Installer
-# get-pip.py
+get-pip.py
 
 # Chache
 __pycache__
