--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
     - name: Analysing the code with pylint
-      working-directory: ./client
+      # working-directory: ./Zeyecx
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        pylint --rcfile=.pylintrc `ls -R|grep .py$|xargs`
