pkg as main branch

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,7 +18,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
     - name: Analysing the code with pylint
-      working-directory: ./client
+      working-directory: ./faultybot
       run: |
-        wget https://raw.githubusercontent.com/jplight/faultybot/main/.pylintrc
+        wget https://raw.githubusercontent.com/jplight/faultybot/package/.pylintrc
         pylint --rcfile=.pylintrc `ls -R|grep .py$|xargs`
