--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,5 @@
 [MASTER]
 disable=
     C0114, # missing-module-docstring
-    C0116, # Missing function or method docstring
     E0401, # import-error
-    R0914, # Too many local variables
-    E0611, # no-name-in-module
+    R1723, # no-else-break
