--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,7 @@
 [MASTER]
 disable=
     C0114, # missing-module-docstring
+    C0116, # missing-function-docstring
     E0401, # import-error
     R1723, # no-else-break
+    
