--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,8 +17,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
-    - name: Analysing the code with pylint
+        pip install -r requirements.txt
+    - name: Analysing the Project
       working-directory: ./faultybot
       run: |
         wget https://raw.githubusercontent.com/jplight/faultybot/main/.pylintrc
         pylint --rcfile=.pylintrc `ls -R|grep .py$|xargs`
+    - name: Analysing the Settings
+      run: |
+        wget https://raw.githubusercontent.com/jplight/faultybot/main/.pylintrc
+        pylint --rcfile=.pylintrc setup.py
