--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -4,21 +4,22 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
-      working-directory: ./faultybot
-      run: |
-        wget https://raw.githubusercontent.com/jplight/faultybot/main/.pylintrc
-        pylint --rcfile=.pylintrc `ls -R|grep .py$|xargs`
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
+      - name: Analyse the Faultybot Project
+        working-directory: ./faultybot
+        run: |
+          pylint --rcfile=../.pylintrc `ls -R|grep .py$|xargs`
+      - name: Analysing the Package
+        run: |
+          pylint --rcfile=.pylintrc `ls |grep .py$|xargs`
