adjust old and incorrect pylint values.
Error: https://github.com/eskopp/faultybot/actions/runs/7250850076/job/19751943340

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,7 +22,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pylint
       - name: Analyse the Faultybot Project
-        working-directory: ./faultybot
+        working-directory: faultybot
         run: |
           pylint --rcfile="../.pylintrc" `ls -R|grep .py$|xargs`
       - name: Analysing the Package
